- Implement no shutdown command
- Prepare interface acl handling
- Implement saving configuration

Alpha 0.6
- Pré-implément ACL binding for in/out on interfaces
- Update Copyright for 2012
- Implement prompt_msg file which contains majority of text macros
- Implement ip routing & ip multicast-routing

Alpha 0.7
- Implement show running-config
- Implement show startup-config
- Implement ip route A.B.C.D M.A.S.K G.A.T.E

Alpha 0.8
- interactive shell for extended ACLs (ip access-list <name> extended command)

Alpha 0.9
- Caught CTRL+C & CTRL+Z signal for return to enable menu

Alpha 0.10
- Use DHClient only when interface is up
- Save Interface configuration in system when command save is done
- Implement function to calculate str netmask by cidr
- Bugfix on Interface <name> -> Description command
- Implement Interface -> no description command
- Refuse Proto on firewall when not TCP,UDP,ICMP (need more support for generic protos later)

Alpha 0.11
- Implement writing pf.conf rules with reloading
- Due to this, remove editPacketFilter command
- Reload packet filter only if it's enabled
- Implement configuration for firewall state. Disable is written, Enable by default
- Fix malloc warnings on compilation
- Fix strcmp, strcat warnings on compilation
- Implement show firewall stats to get stats from PacketFilter

Alpha 0.12
- Added quick keyword for packetFilter to go out of rules tables when match.
- Added fingerprinting for startup-config and running-config in md5, sha1 and sha256
- Implement no hostname <name>
- Added fingerprinting for pf.conf in md5, sha1 and sha256
- PacketFilter configuration is now written into pf.conf.run and copied into pf.conf when saving firewall
- Save sysctl for mcastrouting and ip routing with fingerprinting

Alpha 0.13
- Some little cleanup
- Create daemon and client sources. Split files between the two things
- Added callback for commands
- Bugfix for send command
- Proper flush for stdout before printing the prompt